WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106306
BaseDateAndTimeInputType should not inherit from TextFieldInputType
https://bugs.webkit.org/show_bug.cgi?id=106306
Summary
BaseDateAndTimeInputType should not inherit from TextFieldInputType
Kent Tamura
Reported
2013-01-07 23:51:09 PST
Chromium Android port uses the hack described in
Bug 100935
no longer. We can remove the TextFieldInputType inheritance.
http://code.google.com/p/chromium/issues/detail?id=159381
Attachments
Patch
(11.22 KB, patch)
2013-01-08 01:06 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-01-08 01:06:36 PST
Created
attachment 181669
[details]
Patch
Hajime Morrita
Comment 2
2013-01-08 17:44:00 PST
Comment on
attachment 181669
[details]
Patch r=me
WebKit Review Bot
Comment 3
2013-01-11 03:26:07 PST
Comment on
attachment 181669
[details]
Patch Clearing flags on attachment: 181669 Committed
r139424
: <
http://trac.webkit.org/changeset/139424
>
WebKit Review Bot
Comment 4
2013-01-11 03:26:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug