Source/WebCore/html/BaseChooserOnlyDateAndTimeInputType.h
@@ -44,9 +44,6 @@ private:
     void closeDateTimeChooser();
 
     // InputType functions:
-    virtual RenderObject* createRenderer(RenderArena*, RenderStyle*) const OVERRIDE;
-    virtual void updateInnerTextValue() OVERRIDE;
-    void forwardEvent(Event*) OVERRIDE;
     virtual void createShadowSubtree() OVERRIDE;
     virtual void detach() OVERRIDE;
     virtual void setValue(const String&, bool valueChanged, TextFieldEventBehavior) OVERRIDE;
