Source/WebCore/html/BaseDateAndTimeInputType.cpp
@@ -96,14 +96,6 @@ bool BaseDateAndTimeInputType::isSteppable() const
     return true;
 }
 
-void BaseDateAndTimeInputType::handleKeydownEvent(KeyboardEvent* event)
-{
-    if (shouldHaveSpinButton())
-        handleKeydownEventForSpinButton(event);
-    if (!event->defaultHandled())
-        TextFieldInputType::handleKeydownEvent(event);
-}
-
 Decimal BaseDateAndTimeInputType::parseToNumber(const String& source, const Decimal& defaultValue) const
 {
     DateComponents date;
@@ -166,15 +158,6 @@ String BaseDateAndTimeInputType::visibleValue() const
     return localizeValue(element()->value());
 }
 
-String BaseDateAndTimeInputType::convertFromVisibleValue(const String& visibleValue) const
-{
-    // convertFromVisibleValue is used in the textfield UI. Though this class
-    // inherits TextFieldInputType, users are unable to edit visible values, and
-    // this function is never called.
-    ASSERT_NOT_REACHED();
-    return visibleValue;
-}
-
 String BaseDateAndTimeInputType::sanitizeValue(const String& proposedValue) const
 {
     return typeMismatchFor(proposedValue) ? String() : proposedValue;
@@ -183,6 +166,16 @@ String BaseDateAndTimeInputType::sanitizeValue(const String& proposedValue) cons
 bool BaseDateAndTimeInputType::supportsReadOnly() const
 {
     return true;
+}
+
+bool BaseDateAndTimeInputType::shouldRespectListAttribute()
+{
+    return InputType::themeSupportsDataListUI(this);
+}
+
+bool BaseDateAndTimeInputType::valueMissing(const String& value) const
+{
+    return element()->isRequired() && value.isEmpty();
 }
 
 } // namespace WebCore
